# test-zkwasm-cicd

./: .env.example  Cargo.toml  Dockerfile.ci  Makefile  README.md  zkwasm.config.json
.github/workflows/: ci-cd.yml
build-artifacts/application/: application_bg.wasm  application_bg.wasm.d.ts
ts/src/: api.js  api.js.map  query.js  query.js.map  service.js  service.js.map  service.ts  test.js  test.js.map
